# movie-barcodes

./: .gitignore  LICENSE  README.md  pyproject.toml
movie_barcode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
moviebarcode/: __init__.py  cli.py  models.py
moviebarcode/pipeline/: blending.py  color_extract.py  letterbox.py  render.py  shot_detect.py
moviebarcode/utils/: av_helpers.py  color.py
web/: index.html  package-lock.json  package.json
web/public/barcodes/: BrokebackMountain_natural.json  BrokebackMountain_vivid.json  ChungkingExpress_natural.json  ChungkingExpress_vivid.json  CurseOfTheGoldenFlower_natural.json  CurseOfTheGoldenFlower_vivid.json  FarewellMyConcubine_natural.json  FarewellMyConcubine_vivid.json  HouseOfFlyingDaggers_natural.json  HouseOfFlyingDaggers_vivid.json  InTheMoodForLove_natural.json  InTheMoodForLove_vivid.json  LoveLetter_natural.json  LoveLetter_vivid.json  RaiseTheRedLantern_natural.json  RaiseTheRedLantern_vivid.json  Shadow_natural.json  Shadow_vivid.json  SpiritedAway_natural.json  SpiritedAway_vivid.json
web/src/: App.css  App.jsx  index.css
web/src/data/: barcodes.json
